# distributedhardware_device_manager

./: BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  devicemanager.gni  ohos.build
common/include/: constants.h
common/include/ipc/model/: ipc_notify_auth_result_req.h  ipc_notify_check_auth_result_req.h  ipc_notify_device_found_req.h  ipc_notify_device_state_req.h  ipc_notify_discover_result_req.h  ipc_notify_dmfa_result_req.h  ipc_set_useroperation_req.h  ipc_stop_discovery_req.h
common/log/include/: device_manager_log.h
common/utils/include/: device_manager_errno.h  single_instance.h
display/: README_zh.md  build.gradle
display/entry/: build.gradle
display/entry/src/main/: config.json
display/entry/src/main/js/default/pages/index/: index.js
interfaces/inner_kits/native_cpp/: BUILD.gn
interfaces/inner_kits/native_cpp/include/: device_manager.h  device_manager_callback.h  device_manager_listener_stub.h  device_manager_proxy.h  dm_app_image_info.h  dm_device_info.h  dm_subscribe_info.h  idevice_manager.h  idevice_manager_listener.h
interfaces/inner_kits/native_cpp/include/notify/: device_manager_notify.h
interfaces/inner_kits/native_cpp/src/: device_manager.cpp  device_manager_impl.cpp  device_manager_listener_stub.cpp  device_manager_proxy.cpp  dm_device_info.cpp  dm_subscribe_info.cpp
interfaces/inner_kits/native_cpp/src/ipc/lite/: ipc_client_server_proxy.cpp  ipc_client_stub.cpp  ipc_cmd_parser.cpp
interfaces/inner_kits/native_cpp/src/ipc/standard/: ipc_cmd_parser.cpp
interfaces/inner_kits/native_cpp/src/notify/: device_manager_notify.cpp
interfaces/kits/js/: BUILD.gn
interfaces/kits/js/include/: dm_native_event.h  native_devicemanager_js.h
interfaces/kits/js/src/: dm_native_event.cpp  native_devicemanager_js.cpp
services/devicemanagerservice/: BUILD.gn
services/devicemanagerservice/include/: device_manager_listener_proxy.h  device_manager_service.h  device_manager_stub.h
services/devicemanagerservice/include/auth/: hichain_connector.h
services/devicemanagerservice/include/authdemo/: device_client_channel.h  device_server_channel.h  hichain_adapter.h
services/devicemanagerservice/include/ipc/: ipc_server_adapter.h  ipc_server_listener_adapter.h
services/devicemanagerservice/include/ipc/lite/: ipc_server_listenermgr.h
services/devicemanagerservice/include/message/: msg_request_auth.h  msg_response_auth.h
services/devicemanagerservice/include/requestauth/: auth_manager.h  request_session.h  response_session.h
services/devicemanagerservice/include/softbus/: softbus_adapter.h  softbus_session.h
services/devicemanagerservice/include/timer/: dm_timer.h
services/devicemanagerservice/include/util/: anonymous_string.h
services/devicemanagerservice/src/: device_manager_listener_proxy.cpp  device_manager_service.cpp  device_manager_stub.cpp
services/devicemanagerservice/src/ability/: dm_ability_manager.cpp
services/devicemanagerservice/src/ability/lite/: dm_ability_manager.cpp
services/devicemanagerservice/src/ability/standard/: dm_ability_manager.cpp
services/devicemanagerservice/src/auth/: hichain_connector.cpp
services/devicemanagerservice/src/authdemo/: device_client_channel.cpp  device_server_channel.cpp  hichain_adapter.cpp
services/devicemanagerservice/src/ipc/: ipc_server_adapter.cpp  ipc_server_listener_adapter.cpp
services/devicemanagerservice/src/ipc/lite/: ipc_cmd_parser.cpp  ipc_server_listener.cpp  ipc_server_main.cpp  ipc_server_stub.cpp
services/devicemanagerservice/src/ipc/standard/: ipc_cmd_parser.cpp  ipc_server_stub.cpp
services/devicemanagerservice/src/message/: msg_request_auth.cpp  msg_response_auth.cpp  msg_sync_group.cpp
services/devicemanagerservice/src/requestauth/: auth_manager.cpp  request_session.cpp  response_session.cpp
services/devicemanagerservice/src/softbus/: softbus_adapter.cpp  softbus_session.cpp
services/devicemanagerservice/src/timer/: dm_timer.cpp
services/devicemanagerservice/src/util/: anonymous_string.cpp
test/unittest/: BUILD.gn  device_manager_impl_test.cpp  device_manager_impl_test.h
test/unittest/mock/: mock_ipc_client_proxy.h
utils/: BUILD.gn
utils/include/ipc/lite/: ipc_cmd_register.h
utils/src/: anonymous_string.cpp
utils/src/cipher/: encrypt_utils.cpp
utils/src/ipc/lite/: ipc_cmd_register.cpp
