# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/distributedhardware/devicemanager/devicemanager.gni")

config("dmnativeinnerkit_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "include",
    "${common_path}/log/include",
    "${common_path}/utils/include",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-Wdate-time",
    "-Wfloat-equal",
    "-Wshadow",
    "-Wformat=2",
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
  ]

  cflags_cc = [
    "-Os",
  ]
}

config("dmnativeinnerkit_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("devicemanagersdk") {
  sources = [
    "src/device_manager_proxy.cpp",
    "src/device_manager_listener_stub.cpp",
    "src/device_manager.cpp",
    "src/dm_device_info.cpp",
    "src/dm_subscribe_info.cpp",
    ]

  configs = [ ":dmnativeinnerkit_config" ]

  public_configs = [ ":dmnativeinnerkit_public_config" ]

  deps = [ "//utils/native/base:utils" ]

  defines = [
    "DH_LOG_TAG=\"devicemanagerkit\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]

  subsystem_name = "distributedhardware"

  part_name = "device_manager_base"
}
