# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/distributedhardware/devicemanager/devicemanager.gni")

config("dmnativejs_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//third_party/node/src",
    "//foundation/ace/napi/native_engine",
    "//foundation/ace/napi/interfaces/kits",
    "//utils/native/base/include",
    "include",
    "${common_path}/log/include",
    "${common_path}/utils/include",
    "${innerkits_path}/native_cpp/include",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-Wdate-time",
    "-Wfloat-equal",
    "-Wshadow",
    "-Wformat=2",
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
  ]

  cflags_cc = [
    "-Os",
  ]
}

ohos_shared_library("devicemanager") {
  sources = [
    "src/native_devicemanager_js.cpp",
    "src/dm_native_event.cpp",
    ]

  configs = [ ":dmnativejs_config" ]

  deps = [
    "//utils/native/base:utils",
    "//foundation/ace/napi:ace_napi",
    "//foundation/distributedhardware/devicemanager/interfaces/inner_kits/native_cpp:devicemanagersdk",
  ]

  defines = [
    "DH_LOG_TAG=\"devicemanagerkit_js\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]

  subsystem_name = "distributedhardware"
  relative_install_dir = "module/distributedhardware"
  part_name = "device_manager_base"
}

group("devicemanager_native_js") {
  deps = [ ":devicemanager" ]
}
